--- a/socialpakt_site/socialpakt_proto/static/shirt.css
+++ b/socialpakt_site/socialpakt_proto/static/shirt.css
@@ -89,4 +89,4 @@
 /* ---------- SHIRT BG IMAGE OVERRIDES ------------- */
 /* ------------------------------------------------- */
 
-#featuredshirt.mayorsalliance {background-position: -390px -110px;}
+body.mayorsalliance {background-position: -390px 0;}
